gcc/testsuite/rust/rustc/ui/let-else/let-else-scope.rs
fn main() {
    let Some(x) = Some(2) else {
        panic!("{}", x); // { dg-error ".E0425." "" { target *-*-* } }
    };
}

